--- a/style.css
+++ b/style.css
@@ -218,5 +218,10 @@ footer {
     font-weight: bold;
 }
 
+/* Clickable logo */
+.logo-link {
+    text-decoration: none;
+    color: inherit;
+}
 
 
